<resources>
    <string name="app_name">Receipt</string>
    <string name="action_settings">Settings</string>
    <string name="print">Print</string>
    <string name="name">Name:</string>
    <string name="pin">Pin:</string>
    <string name="pick_barcode">Pick Barcode</string>
    <string name="pick_photo">Pick Photo</string>
    <string name="pick_logo">Pick Logo</string>
    <string name="web_view_print">Web View Print</string>
    <string name="app_print">App Print</string>
    <string name="village">Village</string>
    <string name="mobile_no">Mobile No</string>
    <string name="union">Union</string>
    <string name="sub_district">Sub District</string>
    <string name="district">District</string>
    <string name="account_name">Account Name</string>
    <string name="id_no">Id No</string>
    <string name="account_no">Account No</string>
    <string name="account_type">Account Type</string>
    <string name="print_date">Print Date</string>
    <string name="account_opening_date">Account Opening Date</string>
    <string name="savings_account">Savings Account</string>
    <string name="account_balance">Account Balance</string>
    <string name="dps_account">DPS Account</string>
    <string name="cash_deposit">Cash Deposit</string>
    <string name="cash_withdraw">Cash Withdraw</string>
    <string name="fund_transfer">Fund Transfer</string>
    <string name="fixed_deposit">Fixed Deposit</string>
    <string name="reb">REB</string>
    <string name="agent_banking">Agent Banking</string>

    <string name="accountNoText">হিসাব নম্বর</string>
    <string name="accountNameText">হিসাব নাম</string>
    <string name="accountBalanceText">ব্যালান্স</string>
    <string name="accountOpeningDateText">হিসাব খোলার তারিখ</string>
    <string name="accountTypeText">হিসাবের ধরন</string>
    <string name="addressLine1Text">এজেন্ট ব্যাংকিং ডিভিশন</string>
    <string name="addressLine2Text">সিটি ব্যাংক লিঃ</string>
    <string name="addressLine3Text">সিটি ব্যাংক  সেন্টার ১৩৬</string>
    <string name="addressLine4Text">গুলশান এভিনিউ, ঢাকা-১২১২</string>
    <string name="addressText">ঠিকানা</string>
    <string name="agentNameText">এজেন্টের নাম</string>
    <string name="balanceAmountText">ব্যালান্সের পরিমান</string>
    <string name="balanceDateText">ব্যালান্সের তারিখ</string>
    <string name="chargeText">চার্জ</string>
    <string name="cashDepositText">নগদ জমা</string>
    <string name="cashWithdrawText">নগদ উত্তোলন</string>
    <string name="cityAgentFixedDepositText">সিটি এজেন্ট ফিক্সড ডিপোজিট</string>
    <string name="cityAgentSavingsAccountText">সিটি এজেন্ট সেভিংস হিসাব</string>
    <string name="colonText">:</string>
    <string name="customerIdText">গ্রাহক আইডি</string>
    <string name="customerNameText">গ্রাহকের নাম</string>
    <string name="depositAmountText">জমার পরিমান</string>
    <string name="depositDateText">জমার তারিখ</string>
    <string name="emptyText"></string>
    <string name="fundTransferDateText">ফান্ড ট্রান্সফারের তারিখ</string>
    <string name="fundTrasferText">ফান্ড ট্রান্সফার</string>
    <string name="generalDPSAccountText">সাধারন ডিপিএস হিসাব</string>
    <string name="initialDepositText">প্রারম্ভিক জমার পরিমান</string>
    <string name="inWordsText">কথায়</string>
    <string name="linkAccountNumberText">লিংক হিসাব নম্বর</string>
    <string name="maturityAmountText">মেয়াদান্তে টাকার পরিমান</string>
    <string name="maturityDateText">মেয়াদান্তের তারিখ</string>
    <string name="mobileNoText">মোবাইল নং</string>
    <string name="monthlyDepositText">মাসিক জমা</string>
    <string name="profitRateText">মুনাফার হার</string>
    <string name="printDateText">প্রিন্টের তারিখ</string>
    <string name="principalAmountText">আসল টাকার পরিমান</string>
    <string name="productTenorText">মেয়াদ</string>
    <string name="receiverAccountNoText">প্রাপকের হিসাব নম্বর</string>
    <string name="receiverAccountNameText">প্রাপকের হিসাব নাম</string>
    <string name="senderAccountNoText">প্রেরকের হিসাব নম্বর</string>
    <string name="sendrAccountNameText">প্রেরকের হিসাব নাম</string>
    <string name="transferAmountText">ট্রান্সফারের পরিমান</string>
    <string name="transactionIdText">লেনদেন আইডি</string>
    <string name="userText">ইউজার</string>
    <string name="withdrawAmountText">উত্তোলনের পরিমান</string>
    <string name="withdrawDateText">উত্তোলনের তারিখ</string>
    <string name="printing">Printing...</string>
    <string name="printingStarted">Printing Started</string>
    <string name="printJobQueued">Print Job Queued</string>
</resources>
