<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="co.celloscope.printingdemo.MainActivity">
    <item
        android:id="@+id/account_balance"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/account_balance"/>
    <item
        android:id="@+id/cash_deposit"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/cash_deposit"/>
    <item
        android:id="@+id/cash_withdraw"
        android:orderInCategory="100"
        android:title="@string/cash_withdraw"
        app:showAsAction="never" />
    <item
        android:id="@+id/dps_account"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/dps_account"/>
    <item
        android:id="@+id/fixed_deposit"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/fixed_deposit"/>
    <item
        android:id="@+id/fund_transfer"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/fund_transfer"/>
    <item
        android:id="@+id/savings_account"
        android:orderInCategory="100"
        android:title="@string/savings_account"
        app:showAsAction="never" />
</menu>
